Layout Test media/video-source-load.html is failing https://bugs.webkit.org/show_bug.cgi?id=82094

Reviewed by Alexey Proskuryakov.

No new tests, tested by media/video-source-load.html.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::sourceWasAdded): Set m_nextChildNodeToConsider when called
    with networkState == NETWORK_EMPTY because the resource selection algorithm has
    not started yet.


git-svn-id: svn://svn.chromium.org/blink/trunk@111938 bbb929c8-8fbe-4397-9dbb-9b2b20218538