third_party/WebKit/Source/WebCore/html/HTMLMediaElement.cpp
@@ -2875,6 +2875,7 @@ void HTMLMediaElement::sourceWasAdded(HTMLSourceElement* source)
     // the media element's resource selection algorithm.
     if (networkState() == HTMLMediaElement::NETWORK_EMPTY) {
         scheduleLoad(MediaResource);
+        m_nextChildNodeToConsider = source;
         return;
     }
 
